2008-09-01  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-gimp-layout): Change the layout to
	main-window-right-layout. Change the keybinding for (shift)alt+tab
	to not select windows in the main window lisst.
	Bind F8 to add a window in the main window list.
	Bind F9 to remove a window in the main window list.
	Change the focus policy to :sloppy.
	(set-previous-layout): Restore the previous layout, keybinding and
	focus policy.

2008-08-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-menu.lisp (add-menu-comment): Add comments in menu.

	* src/clfswm-layout.lisp (main-window-left-layout)
	(main-window-bottom-layout, main-window-top-layout): New
	functions.
	Factorize layouts in menu.

2008-08-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (main-window-right-layout): A possible
	GIMP layout: one or more main windows on one side of the
	frame. Others on the other size.

	* src/clfswm-util.lisp
	(current-frame-set-click/sloppy-focus-policy): Each frame can have
	a different focus policy (one of :click or :sloppy).
	The default focus policy is set with *default-focus-policy*.

2008-08-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): New function.

2008-08-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-horizontal-layout): New layout.

	* src/clfswm-info.lisp: Colored help for key binding and corners
	actions.

2008-08-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (delete-focus-window)
	(destroy-focus-window): Remove chid only in 
	handle-unmap/destroy-notify. Focus *current-root* only when
	closing/killing the current child.

	* src/clfswm-autodoc.lisp (produce-corner-*-doc): New autodoc
	functions or corners.

2008-08-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (present-clfswm-terminal): New corner