@@ -214,7 +214,8 @@
 	*pixmap-buffer* (xlib:create-pixmap :width (xlib:screen-width *screen*)
 					    :height (xlib:screen-height *screen*)
 					    :depth (xlib:screen-root-depth *screen*)
-					    :drawable *root*))
+					    :drawable *root*)
+	*in-second-mode* nil)
   (xgrab-init-pointer)
   (xgrab-init-keyboard)
   (init-last-child)
